--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
+    "ember-phoenix-shim": "0.1.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "^2.11.0",
-    "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.0.10"
+    "loader.js": "^4.0.10",
+    "phoenix": "^1.2.1"
   },
   "engines": {
     "node": ">= 0.12.0"
