--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.7.19",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-leaflet": "3.0.9",
+    "ember-leaflet-heatmap": "0.2.1",
+    "ember-leaflet-marker-cluster": "0.1.0",
     "ember-load-initializers": "^0.6.0",
     "ember-phoenix-shim": "0.1.0",
     "ember-resolver": "^2.0.3",
