--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-leaflet": "3.0.9",
     "ember-leaflet-heatmap": "0.2.1",
+    "ember-leaflet-layer-control": "0.1.0",
     "ember-leaflet-marker-cluster": "0.1.0",
     "ember-load-initializers": "^0.6.0",
     "ember-phoenix-shim": "0.1.0",
